--- a/application/app/Resources/views/nilmo-doc.html.twig
+++ b/application/app/Resources/views/nilmo-doc.html.twig
@@ -9,27 +9,7 @@
             <div class="section-list">
                 <h2>General Information about the API:</h2>
                 <br>
-                <p>- To login the user first send the username and password as hashed string in the Authorization header password.</p>
-                <p>- Encode the username and password string "username:password" in <a href="http://base64encode.net/" target="_blank">base64</a> format </p>
-                <pre>Authorization: Basic {base64-hash}</pre>
-                <br/>
-                <p>- Default sample user </p>
-                <pre>
-{
-    "email": "john@gmail.com",
-    "phone": "1234567890",
-    "password": "password"
-}</pre>
-
-                <p>
-                    - All requests that require logged in user will require an authorization header like this one <code>Authorization: Bearer {TOKEN}</code> if the header is missing or the token is invalid you will receive a response with content like this one:
-                    <pre>
-{
-  "message": "Invalid Token",
-  "status": "failure",
-  "code": 200,
-  "title": "OK"
-}</pre>
+                <p>- The request language is sent in the <code>Accept-Language</code> header, the default value is en.</p>
                 <p>Thank you for reading.</p>
             </div>
         </li>
